--- a/templates/activation_failed.html
+++ b/templates/activation_failed.html
@@ -1,4 +1,1 @@
-{% autoescape off %}
-Activation failed ,please try again
-
-{% endautoescape %}
+<h3>Something went wrong please re request the activation link</h3>
