--- a/templates/email_confirmation.html
+++ b/templates/email_confirmation.html
@@ -1,9 +1,8 @@
  {% autoescape off %}
-
- Welcome to our gang!!
- Hello {{ first_name }}!!
+ Welcome to gang
+ Hello {{ first_name }}
  Please confirm your email  and join our gang by just  clicking on the following link.
 
- Confirmation Link: http://{{ domain }}{% url 'activate' uidb64=uid token=token %} 
+ Confirmation Link: http://{{ domain }}{% url 'activate' uid=uid token=token %}
 
  {% endautoescape %} 
