--- a/templates/shooter/index.html
+++ b/templates/shooter/index.html
@@ -18,7 +18,7 @@
 {% if user.is_authenticated %}
 <h3>Hello {{user.username}} and {{ user.email }} </h3>
 <h4>You are successfully logged in</h4>
-<button  type="submit"><a href="/signout">Sigout</a></button>
+<button  type="submit"><a href="/signout">Signout</a></button>
 
 {% else %}
 <button type="submit" ><a href="/signup">Signup</a></button>
